src/test/ui/issues/issue-17718-constants-not-static.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/issue-17718-constants-not-static.rs:5:31
   |
LL | fn foo() -> &'static usize { &id(FOO) }
   |                               ^^^^^^^ -- borrow later used here
   |                               |       |
   |                               |       temporary value is freed at the end of this statement
   |                               creates a temporary which is freed while still in use
   |
   = note: consider using a `let` binding to create a longer lived value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
